--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>scribbler</title>
-  </head>
-  <body>
+    <link rel="icon" href="<%= BASE_URL %>pencil.png">
+    <title>scribbler.space</title>
+</head>
+<body>
     <noscript>
-      <strong>We're sorry but scribbler doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+        <strong>We're sorry but scribbler doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+    </body>
 </html>
