--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="A simple tool to store a note offline.">
+    <meta name="author" content="Paolo Rufrano">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>pencil.png">
     <title>Scribbler</title>
